[package]
name = "hbuild"
version = "0.2.0"
edition = "2021"

[dependencies]
lexopt = "0.3.0"
owo-colors = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
serde_json = "1.0"
hcl = { package = "hcl-rs", version = "0.19.4" }
hk-parser = "0.1.0"
rayon = "1.5"
git2 = "0.13"
glob = "0.3"
dirs = "4.0"
num_cpus = "1.13"
ctrlc = "3.2"
pkg-config = "0.3"
indexmap = "2.0"
